--- a/src/ic_guestbook_assets/src/index.html
+++ b/src/ic_guestbook_assets/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>ic_guestbook</title>
+    <title>The IC Guestbook</title>
     <base href="/">
 </head>
 <body>
